[package]
name = "workspace"
version = "0.0.0"
authors = ["Matthias Totschnig <matthias@totschnig.org>","Roma Bhattacharjee <roma0615@gmail.com>"]

[dependencies]
clap = "2.31.2"
colored = "1.6.0"
serde = "1.0.62"
serde_derive = "1.0.62"
toml = "0.4"
failure = "0.1.1"
prettytable-rs = { git = "https://github.com/liautaud/prettytable-rs" }

[[bin]]
name = "workspace"
path = "src/main.rs"
